--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 permalink: /404.html
 ---
-# This site has moved...
+# The OpenTestFactory orchestrator documentation site has moved...
 
-Please find us on our new home, here : https://opentestfactory.github.io/orchestrator/
+Please find us on our new home, here : [https://opentestfactory.github.io/orchestrator/](https://opentestfactory.github.io/orchestrator/)
