--- a/404.md
+++ b/404.md
@@ -3,4 +3,4 @@ permalink: /404.html
 ---
 # The OpenTestFactory orchestrator documentation site has moved...
 
-Please find us on our new home, here : [https://opentestfactory.github.io/orchestrator/](https://opentestfactory.github.io/orchestrator/)
+Please find us on our new home, here : [https://opentestfactory.gitlab.io/orchestrator/](https://opentestfactory.gitlab.io/orchestrator/)
